crates/kirin-derive-core/src/field/tests/snapshots/kirin_derive_core__field__tests__test_struct__unit_struct.snap
---
source: crates/kirin-derive-core/src/field/tests/test_struct.rs
expression: generate(input)
---
impl<'a> ::kirin::ir::HasArguments<'a> for TestStruct {
    type Iter = std::iter::Empty<&'a ::kirin::ir::SSAValue>;
    fn arguments(&'a self) -> Self::Iter {
        std::iter::empty::<&'a ::kirin::ir::SSAValue>()
    }
}
